- Card and Cardy now have common border-radius of 20px. - Card spread props can now be overridden. - Cardy no longer has extended padding in bottom. - Update NavBarSearchField to work with TextInput CSS refactor. - NavBarSearchField clear button only visible if it as entered text.

--- a/packages/elements/src/components/ui/cardy/Cardy.module.css
+++ b/packages/elements/src/components/ui/cardy/Cardy.module.css
@@ -1,11 +1,11 @@
 .cardy.cardy {
-  border-radius: 24px;
+  border-radius: var(--swui-border-radius-card);
 
   padding-top: 32px;
-  padding-bottom: 56px;
+  padding-bottom: 32px;
   @media (max-width: 768px) {
     padding-top: 24px;
-    padding-bottom: 48px;
+    padding-bottom: 24px;
   }
 }
 
