--- a/packages/panels/src/components/nav-bar/NavBarSearchField.module.css
+++ b/packages/panels/src/components/nav-bar/NavBarSearchField.module.css
@@ -1,22 +1,22 @@
 .navBarSearchFieldInput.navBarSearchFieldInput {
-  --swui-textinput-line-height: 2.7rem;
-  --swui-textinput-text-color: var(--lhds-color-ui-50);
-  --swui-textinput-placeholder-color: var(--lhds-color-blue-800);
+  line-height: 2.7rem;
+  color: var(--lhds-color-ui-800);
+
+  &::placeholder {
+    color: var(--lhds-color-blue-800);
+  }
 
   padding: 0 var(--swui-metrics-indent);
 
-  &:focus {
-    --swui-textinput-text-color: var(--lhds-color-ui-800);
-  }
 }
 
-.navBarSearchField {
-  --swui-textinput-animation-time: var(--swui-animation-time-fast);
+.navBarSearchFieldWrapper.navBarSearchFieldWrapper {
+  background: var(--lhds-color-ui-200);
+  border-color: transparent;
 
-  --swui-textinput-placeholder-color: var(--lhds-color-ui-500);
-  --swui-textinput-bg-color: var(--lhds-color-ui-200);
-  --swui-textinput-border-color: transparent;
-  --swui-textinput-border-color-hover: transparent;
+  &:hover {
+    border-color: transparent;
+  }
 
   padding: 0 var(--swui-metrics-indent);
 
@@ -27,9 +27,8 @@
   }
 
   &:focus-within {
-    --swui-textinput-text-color: var(--lhds-color-ui-800);
-    --swui-field-text-color: var(--swui-field-text-color);
-    --swui-textinput-bg-color: var(--lhds-color-ui-50);
+    color: var(--lhds-color-ui-800);
+    background: var(--lhds-color-ui-50);
   }
 }
 
