--- a/packages/theme/src/styles/default-theme.css
+++ b/packages/theme/src/styles/default-theme.css
@@ -91,6 +91,7 @@
   --swui-border-radius-small: 4px;
   --swui-border-radius: 8px;
   --swui-border-radius-large: 16px;
+  --swui-border-radius-card: 20px;
   --swui-max-border-radius: 10000px;
 
   /* Shadows */
